--- a/stack.yaml
+++ b/stack.yaml
@@ -1,15 +1,15 @@
 flags: {}
 
-resolver: lts-6.6
-compiler: ghcjs-0.2.0.900006006_ghc-7.10.3
+resolver: lts-6.13
+compiler: ghcjs-0.2.0.9006013_ghc-7.10.3
 
 compiler-check: match-exact
 
 setup-info:
   ghcjs:
     source:
-      ghcjs-0.2.0.900006006_ghc-7.10.3:
-         url: "https://tolysz.org/ghcjs/lts-6.6-900006006.tar.gz"
+      ghcjs-0.2.0.9006013_ghc-7.10.3:
+         url: "https://tolysz.org/ghcjs/lts-6.13-9006013.tar.gz"
 
 allow-newer: true
 
@@ -20,7 +20,9 @@ packages:
     commit: f8338f6b68c9be4e8dcddbbab2098aeffa018535
 # 3a7fb30dde160bc31c0bba4f42f7666ea6ca054a
   extra-dep: true
-- location:
+
+#- location: '../reflex-dom'
+- location: 
     git: https://github.com/ryantrinkle/reflex-dom.git
     commit: e8b7d31fd2b6a8173e51096b7591ec346e33ad85
 # 5318d581fe3ef7b2b0f70ac352d6c56700124b98
@@ -35,8 +37,8 @@ packages:
 extra-deps:
 - ref-tf-0.4
 - these-0.6.1.0
-- ghcjs-dom-0.3.1.0
-- ghcjs-dom-jsffi-0.3.1.0
+- ghcjs-dom-0.2.4.0
+#- ghcjs-dom-jsffi-0.3.1.0
 # - ghcjs-dom-0.2.3.0
 #- stateWriter-0.2.6
 #- store-0.2.0.0
